image-set doesn't round-trip properly with cssText https://bugs.webkit.org/show_bug.cgi?id=99725

Patch by Rick Byers <rbyers@chromium.org> on 2012-10-24
Reviewed by Beth Dakin.

Source/WebCore:

Fix serialization of -webkit-image-set rules to use the same format as
is used for parsing.

Test: fast/css/image-set-setting.html

* css/CSSImageSetValue.cpp:
(WebCore::CSSImageSetValue::customCssText):
* css/CSSValueList.h:
(WebCore::CSSValueList::item): Add const overload

LayoutTests:

Update image-set-setting test to expect the css text to round-trip properly.

* fast/css/image-set-setting-expected.txt:
* fast/css/script-tests/image-set-setting.js:
(testComputedStyle):
(testImageSetRule):

Canonical link: https://commits.webkit.org/118303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132388 268f45cc-cd09-0410-ab3c-d52691b4dbfc